--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ header {
   display: flex;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 5px 5px 10px black;
+  box-shadow: 0px 0px 10px 5px grey;
 }
 
 .header1-text {
@@ -186,7 +186,7 @@ header {
   overflow: hidden;
   position: relative;
   border-radius: 5px;
-  box-shadow: 5px 5px 10px black;
+  box-shadow: 0px 0px 10px 5px grey;
 }
 
 .header2 img {
@@ -230,7 +230,7 @@ align-items: center;
   padding: 1rem 2px 1rem 1rem;
   border-radius: 10px;
   font-family: 'Josefin Slab', serif;
-  
+  box-shadow: 0px 0px 10px 5px grey;
 }
 
 
@@ -240,6 +240,11 @@ align-items: center;
   object-fit: cover;
   padding: 1rem 10px 1rem 1rem;
   border-radius: 2rem;
+  
+}
+
+.productSection{
+  background-color: #eeecec;
 }
 
 .product-part{
@@ -247,3 +252,28 @@ align-items: center;
   font-size: 1.5rem;
 
 }
+
+.products{
+  display: flex;
+  flex-wrap:wrap ;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem;
+}
+
+.product{
+  width: 20rem;
+  height: 20rem;
+  text-align: center;
+  box-shadow: 0px 0px 10px 5px grey;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.product img{
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+}
+
